force-app/main/default/objects/Lead/fields/Actividad_Actual__c.field-meta.xml
<CustomField>
    <fullName>Actividad_Actual__c</fullName>
    <label>Actividad Actual</label>
    <type>Text</type>
    <length>255</length>
</CustomField>