force-app/main/default/objects/Lead/fields/Canal__c.field-meta.xml
<CustomField>
    <fullName>Canal__c</fullName>
    <label>Canal</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>WhatsApp</fullName>
            </value>
            <value>
                <fullName>Correo</fullName>
            </value>
            <value>
                <fullName>Web</fullName>
            </value>
            <value>
                <fullName>Telefono</fullName>
                <label>Teléfono</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>