force-app/main/default/objects/Lead/fields/En_Conversacion__c.field-meta.xml
<CustomField>
    <fullName>En_Conversacion__c</fullName>
    <label>En Conversación</label>
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
</CustomField>