force-app/main/default/objects/Lead/fields/Estado__c.field-meta.xml
<CustomField>
    <fullName>Estado__c</fullName>
    <label>Estado Conversación</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>online</fullName>
                <label>En línea</label>
            </value>
            <value>
                <fullName>waiting</fullName>
                <label>Esperando respuesta</label>
            </value>
            <value>
                <fullName>attention</fullName>
                <label>Requiere atención</label>
            </value>
            <value>
                <fullName>advisor</fullName>
                <label>Atendido por asesor</label>
            </value>
            <value>
                <fullName>offline</fullName>
                <label>Sin conversación</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>