force-app/main/default/objects/Lead/fields/Etapa__c.field-meta.xml
<CustomField>
    <fullName>Etapa__c</fullName>
    <label>Etapa del Prospecto</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Prospecto</fullName>
            </value>
            <value>
                <fullName>Analisis</fullName>
                <label>Análisis</label>
            </value>
            <value>
                <fullName>Evaluacion</fullName>
                <label>Evaluación</label>
            </value>
            <value>
                <fullName>Cerrado</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>