force-app/main/default/objects/Lead/fields/Necesita_Atencion__c.field-meta.xml
<CustomField>
    <fullName>Necesita_Atencion__c</fullName>
    <label>Necesita Atención</label>
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
</CustomField>