force-app/main/default/objects/Lead/fields/Razon_Alerta__c.field-meta.xml
<CustomField>
    <fullName>Razon_Alerta__c</fullName>
    <label>Razón de Alerta</label>
    <type>Text</type>
    <length>255</length>
</CustomField>