force-app/main/default/objects/Lead/fields/Ultima_Actividad__c.field-meta.xml
<CustomField>
    <fullName>Ultima_Actividad__c</fullName>
    <label>Última Actividad</label>
    <type>DateTime</type>
</CustomField>